--- a/app/src/main/res/layout/president_pager_item.xml
+++ b/app/src/main/res/layout/president_pager_item.xml
@@ -1,13 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<TextView
+    android:layout_height="match_parent"
+    android:background="#99CCFF">
+
+    <ImageView
+        android:id="@+id/picture"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        />
+
+    <TextView
     android:id="@+id/name"
+        android:textSize="50sp"
+        android:textStyle="bold"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/number"
+        android:textSize="30sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/life"
+        android:textSize="30sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/office"
+        android:textSize="30sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/party"
+        android:textSize="30sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </LinearLayout>
