Layout and pictures

--- a/app/src/main/res/layout/president_pager_item.xml
+++ b/app/src/main/res/layout/president_pager_item.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#99CCFF">
 
     <ImageView
         android:id="@+id/picture"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         />
 
     <TextView
@@ -15,26 +17,38 @@
         android:textSize="50sp"
         android:textStyle="bold"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
+    android:layout_height="wrap_content"
+        android:layout_below="@id/picture"
+        tools:text="NAME"/>
     <TextView
         android:id="@+id/number"
         android:textSize="30sp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        tools:text="NUMBER"/>
     <TextView
         android:id="@+id/life"
         android:textSize="30sp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/name"
+        tools:text="LIFE"/>
     <TextView
         android:id="@+id/office"
         android:textSize="30sp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/name"
+        android:layout_alignParentRight="true"
+        tools:text="OFFICE"/>
 
     <TextView
         android:id="@+id/party"
         android:textSize="30sp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/life"
+        tools:text="PARTY"/>
+</RelativeLayout>
