linear layout weight

--- a/app/src/main/res/layout-land/president_pager_item.xml
+++ b/app/src/main/res/layout-land/president_pager_item.xml
@@ -9,14 +9,15 @@
     <ImageView
         android:id="@+id/picture"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true" />
 
     <TextView
         android:id="@+id/name"
         style="@style/PresidentInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/picture"
+        android:layout_toRightOf="@id/picture"
         android:textStyle="bold"
         tools:text="NAME" />
 
@@ -33,6 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/name"
+        android:layout_toRightOf="@id/picture"
         android:textSize="30sp"
         tools:text="LIFE" />
 
