--- a/app/src/main/res/layout/fragment_president_list.xml
+++ b/app/src/main/res/layout/fragment_president_list.xml
@@ -6,11 +6,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <fragment android:name="presidents.sglazerpresident.PresidentListFragment"
-        android:id="@+id/list_fragment"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout="@layout/fragment_president_list"
-        ></fragment>
-
+        android:layout_height="match_parent"/>
 </RelativeLayout>
