--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -2,9 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-<android.support.v4.view.ViewPager
-     android:id="@+id/viewPager"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    />
+
+    <fragment
+        android:id="@+id/fragment_president_detail"
+        android:name="presidents.sglazerpresident.PresidentDetailFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></fragment>
 </LinearLayout>
